methods.picture.MethodsPicture.scala.error
Erreur de compilation :
MethodsPicture:7: error: not found: value c
        c = k match {
        ^MethodsPicture:13: error: not found: value c
        faireV(c)
               ^